--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -16,7 +16,7 @@
 		 <div class="container-fluid" style="padding: 0px; margin: 0px;">
 		 	   <div class="langingSection">
 		 	   	      <i></i>
-		 	   	      <h1 id="titleMami">Mami</h1>
+		 	   	      <h1 id="titleMami">MAMI</h1><br>
 		 	   	      <h3>Enlighteened citizens of Gods kingdom</h3>
 		 	   </div>
                <div class="aboutSection">
