committing to database

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -6,6 +6,8 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <script src="/javajcript/jquery-3.2.1.min(first).js"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <base href="http://127.0.0.1:5000">
         <link rel="stylesheet" href="/stylesheet/homepage.css">
         <link rel="stylesheet" href="/stylesheet/homepage1.css">
@@ -15,7 +17,7 @@
 	<body>
 		 <div class="container-fluid" style="padding: 0px; margin: 0px;">
 		 	   <div class="langingSection">
-		 	   	      <i></i>
+		 	   	      <i class="fa fa-bars"></i>
 		 	   	      <h1 id="titleMami">MAMI</h1><br>
 		 	   	      <h3>Enlighteened citizens of Gods kingdom</h3>
 		 	   </div>
@@ -23,8 +25,30 @@
                	      <div>
                	      	  <img src="/image/pastormuyiwa.jpg" alt="">
                	      </div><br>
-                      <video src="/video/introductionVideos.ogv"></video>
+                      <video src="/video/introductionVideos.ogv" id="videoIntroduction" autoplay="true"></video>
                </div>
+               <div class="row">
+               	   <div class="col-sm-6 firstEvent">
+               	   	   <img src="/images/event.jpg" alt="">
+               	   	   <p>further Discription of the Event can be here further Discription of the Event can be here further Discription of the Event can be here</p>
+               	   </div>
+               	   <div class="col-sm-6 secondEvent">
+               	   	   <img src="/images/event3.jpg" alt="">
+               	   	   <p>further Discription of the Event can be here further Discription of the Event can be here further Discription of the Event can be here</p>
+               	   </div>
+               </div>
+
+               <div class="row">
+               	   <div class="col-sm-6 thirdEvent">
+               	   	   <img src="/images/event11.jpg" alt="">
+               	   	   <p>further Discription of the Event can be here further Discription of the Event can be here further Discription of the Event can be here</p>
+               	   </div>
+               	   <div class="col-sm-6 fouthEvent">
+               	   	   <img src="/images/event8.jpg" alt="">
+               	   	    <p>further Discription of the Event can be here further Discription of the Event can be here further Discription of the Event can be here</p>
+               	   </div>
+               </div>
+
                <div class="row">
                	     <div>
                	     	  <ul>
@@ -65,12 +89,13 @@
 		 	   </div>
                <div class="navigationRightSide">
                	    <ul>
-               	    	<li>menu one</li>
-               	    	<li>menu two </li>
-               	    	<li>menu three</li>
-               	    	<li>menu four</li>
-               	    	<li>menu five</li>
-               	    	<li>menu six</li>
+               	    	<li><a href="">LiveStream</a></li>
+               	    	<li><a href="">Admin</a></li>
+               	    	<li>About MAMI</li>
+               	    	<li>PartnerShip</li>
+               	    	<li>Vision</li>
+               	    	<li>Mission</li>
+                      <li></li>
                	    </ul>
                </div>
               <div class="largerContact">
