--- a/public/stylesheet/homepage.css
+++ b/public/stylesheet/homepage.css
@@ -6,11 +6,10 @@
 }
 
 .langingSection {
-	padding-top: 200px;
 	padding-bottom: 400px;
     width: 100%;
     margin: 0px;
-	background-color: #235C75;
+	background-color: #203640;
 	margin-top: 0px;
 	background-image: url('/images/pastormuyiwaUpdated.jpg');
 	background-size: cover;
@@ -23,6 +22,7 @@
 	width: 100%;
 }
 #titleMami {
+	padding-top: 250px;
 	text-align: center;
 	margin-top: 0px;
 	margin: auto;
@@ -31,7 +31,7 @@
 }
 
 .landingCover {
-	background-color: #235C75;
+	background-color: #203640;
 	padding-top: 250px;
 	padding-bottom: 350px;
 }
@@ -62,7 +62,7 @@
 	padding-top: 50px;
 	padding-bottom: 100px;
 	border-top: 1px solid white;
-	background-color: #235C75;
+	background-color: #203640;
 }
 
 .mainCongratesMessage p, .mainCongratesMessage h3, .mainCongratesMessage h1 {
@@ -83,15 +83,85 @@
 
 .invisibleSection {
 	border-top: 1px solid white;
-	background-color: #235C75;
+	background-color: #203640;
 	color: #235C75;
 }
 
 .congratulationsMessage {
-	background-color: #235C75;
+	background-color: #203640;
 }
 
 .mainCongratesMessage p{
 	font-family: verdana;
 	font-size: 16px;
+}
+
+.fa {
+	border-radius: 5px;
+	font-size: 40px;
+	border: 1px solid white;
+	color: green;
+	float: right;
+	margin-right: 10px;
+	margin-top: 10px;
+	padding: 10px;
+}
+
+.navigationRightSide {
+	border-left: 2px solid white;
+	position: absolute;
+	top: 80px;
+	left: 80%;
+	z-index: 2;
+	float: right;
+	width: 20%;
+	background-color: #203640;
+	padding: 10px;
+	padding-bottom: 100px;
+}
+
+.navigationRightSide a {
+    text-decoration: none;
+    color: white;
+}
+
+.navigationRightSide ul li {
+	list-style-type: none;
+	color: white;
+	padding: 10px;
+	cursor: pointer;
+}
+.navigationRightSide ul li:hover {
+	color: white;
+	background-color: black;
+	border: 1px solid white;
+	border-radius: 5px;
+}
+
+.navigationRightSide ul{
+   
+}
+
+.firstEvent img, .secondEvent img, .thirdEvent img, .fouthEvent img {
+	width: 95%;
+	border: 1px solid black;
+    margin: auto;
+}
+
+.firstEvent, .secondEvent, .fouthEvent, .thirdEvent {
+	padding: 10px;
+	padding-left: 6%;
+}
+
+.firstEvent p, .secondEvent p, .fouthEvent p, .thirdEvent p {
+	width: 95%;
+}
+
+#videoIntroduction {
+	padding-left: 3%;
+	width: 95%;
+}
+
+.aboutSection {
+	width: 100%;
 }
