--- a/public/stylesheet/homepage1.css
+++ b/public/stylesheet/homepage1.css
@@ -10,11 +10,11 @@
 /* On screens that are 600px or less, set the background color to olive */
 @media screen and (max-width: 600px) {
     .langingSection {
-    	background-color: #235C75;
+    	background-color: #203640;
     }
 
 .landingCover {
-	background-color: #235C75;
+	background-color: #203640;
 	padding-top: 170px;
 	padding-bottom: 400px;
 }
@@ -29,4 +29,12 @@
 	padding-bottom: 24px;
 	border-radius: 50%;
 }
+
+.navigationRightSide {
+	position: absolute;
+	top: 80px;
+	left: 20%;
+	width: 80%;
+}
+
 }
