--- a/public/stylesheet/homepage.css
+++ b/public/stylesheet/homepage.css
@@ -165,3 +165,80 @@
 .aboutSection {
 	width: 100%;
 }
+
+.listofministries  ul {
+	margin: auto;
+}
+
+.listofministries  ul li {
+	padding: 10px;
+}
+
+.largerContact {
+	padding-top: 50px;
+	width: 100%;
+	background-image: url('/images/contactingUs.jpg');
+	background-size: cover;
+	padding-bottom: 100px;
+}
+
+.contactForm {
+	/*background-color: rgb(0,0,0); /* Fallback color */
+   /* background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+   margin-top: 150px;
+	width: 100%;
+}
+
+.contactForm input, .contactForm input:nth-child(2), .contactForm textarea, .contactForm label {
+	width: 95%;
+	padding: 7px;
+	border: 1px solid white;
+	background-color: transparent;
+	margin-bottom: 10px;
+	color: white;
+	border-radius: 3px;
+}
+
+.contactForm label {
+	text-align: center;
+	background-color: green;
+	border: 1px solid orange;
+}
+
+.contactForm textarea {
+	height: 150px;
+}
+
+.contactForm button {
+	padding: 7px;
+	color: white;
+	background-color: green;
+    border: 1px solid orange;
+    border-radius: 5px;
+}
+
+.contactForm form {
+	background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.6); /* Black w/ opacity */
+	width: 40%;
+	padding-left: 2%;
+	padding-top: 50px;
+	padding-bottom: 50px;
+    margin-left: 55%;
+    margin-right: 5%;
+}
+
+.largerContact h3 {
+	width: 40%;
+	color: white;
+	font-weight: bold;
+	text-align: center;
+	padding: 10px;
+	border-radius: 5px;
+	margin-left: 30%;
+	margin-bottom: 50px;
+	background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.6); /* Black w/ opacity */
+}
+
+
