--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -25,7 +25,25 @@
                	      <div>
                	      	  <img src="/image/pastormuyiwa.jpg" alt="">
                	      </div><br>
-                      <video src="/video/introductionVideos.ogv" id="videoIntroduction" autoplay="true"></video>
+                      <video src="/video/introductionVideos.ogv" id="videoIntroduction"></video>
+               </div>
+                <div class="row">
+                     <div class="col-sm-6 listofministries">
+                        <ul>
+                            <li>item one</li>
+                            <li>item two</li>
+                            <li>item three</li>
+                            <li>item four</li>
+                            <li>item five</li>
+                            <li>item six</li>
+                            <li>item seven</li>
+                            <li>item eight</li>
+                            <li>item nine</li>
+                        </ul>
+                     </div>
+                     <div class="col-sm-6">
+                        <img src="/image/aboutSectionGif.gif" alt="">
+                     </div>
                </div>
                <div class="row">
                	   <div class="col-sm-6 firstEvent">
@@ -47,25 +65,6 @@
                	   	   <img src="/images/event8.jpg" alt="">
                	   	    <p>further Discription of the Event can be here further Discription of the Event can be here further Discription of the Event can be here</p>
                	   </div>
-               </div>
-
-               <div class="row">
-               	     <div>
-               	     	  <ul>
-               	     		<li>item one</li>
-               	     		<li>item two</li>
-               	     		<li>item three</li>
-               	     		<li>item four</li>
-               	     		<li>item five</li>
-               	     		<li>item six</li>
-               	     		<li>item seven</li>
-               	     		<li>item eight</li>
-               	     		<li>item nine</li>
-               	     	  </ul>
-               	     </div>
-               	     <div>
-               	     	<img src="/image/aboutSectionGif.gif" alt="">
-               	     </div>
                </div>
 		 	   <div class="landingCover">
 		 	   	   <p id="enterButton">enter</p>
@@ -98,17 +97,20 @@
                       <li></li>
                	    </ul>
                </div>
-              <div class="largerContact">
-              	     <h3>Contact Us</h3>
-              	     <div>
-              	     	   <form action="" name="contactForm">
-			          	           <label for="contactForm">Contact Us</label>
-			          	           <input type="text" value="fullname">
-			          	           <input type="email" value="yourEmail@something.com">
-			          	           <textarea name="" id="" style="">please enter your request</textarea>
-			          	   </form>
-              	     </div>
-              </div>
+                    <div class="largerContact">
+                      <h3>Contact Us</h3>
+                         <div class="contactForm">
+                              <form action="" name="contactForm">
+                                 <label for="contactForm">Drop your message</label><br>
+                                 <input type="text" value="fullname"><br>
+                                 <input type="email" value="yourEmail@something.com"><br>
+                                 <textarea name="" id="" style="">please enter your request</textarea><br>
+                                 <button>submit</button>
+                             </form>
+                         </div>
+                   
+                    </div>
+              
               <div class="smallerContact">
               	<form action="" name="contactForm1">
               	   <label for="contactForm">Contact Us</label>
@@ -116,14 +118,11 @@
               	   <input type="email" value="yourEmail@something.com">
               	   <textarea name="" id="" style="">please enter your request</textarea>
               	</form>
-                <div class="continuationOfContactForm">
-                	
-                </div>
               </div>
-
+          
 		      <div class="row footer">
 		          <div class="col-xs-6">
-		 		 	<p>mami logo</p>
+		 		        	<p>mami logo</p>
 		 	      </div>
 		 		 <div class="col-xs-3">
 		 		 	<ul>
