--- a/public/stylesheet/homepage.css
+++ b/public/stylesheet/homepage.css
@@ -31,6 +31,10 @@
 }
 
 .landingCover {
+	position: fixed;
+	top: 0px;
+	width: 100%;
+	z-index: 3;
 	background-color: #203640;
 	padding-top: 250px;
 	padding-bottom: 350px;
@@ -45,6 +49,7 @@
 	padding-top: 37px;
 	padding-bottom: 37px;
 	border-radius: 50%;
+	cursor: pointer;
 }
 
 #entercaption {
@@ -157,9 +162,10 @@
 	width: 95%;
 }
 
-#videoIntroduction {
+.aboutSection video {
 	padding-left: 3%;
 	width: 95%;
+	margin-bottom: 50px;
 }
 
 .aboutSection {
