--- a/public/stylesheet/livestream.css
+++ b/public/stylesheet/livestream.css
@@ -30,7 +30,7 @@
 
 .mainHeaderDiv button {
      padding: 7px;
-     border: 1px solid orange;
+     border: none;
      color: white;
      border-radius: 5px;
      background-color: green;
