work in progress, committing repository

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -95,7 +95,7 @@
                <div class="navigationRightSide">
                	    <ul>
                	    	<li><a href="/livestream">LiveStream</a></li>
-               	    	<li><a href="">Admin</a></li>
+               	    	<li><a href="/admin">Admin</a></li>
                	    	<li>About MAMI</li>
                	    	<li>PartnerShip</li>
                	    	<li>Vision</li>
