--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -6,36 +6,62 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <script src="/javajcript/jquery-3.2.1.min(first).js"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <base href="http://127.0.0.1:5000">
+        <link rel="stylesheet" href="/stylesheet/admin.css">
+        <link rel="stylesheet" href="/stylesheet/footer.css">
 	</head>
 	<body>
-		 <div class="container">
+		 <div class="container-fluid parentCover">
 
 		 	<div class="row">
-		 		<div class="col-sm-3">
+		 	  <div class="col-sm-3 mainNav">
 		 	  	 <ul>
-			 	  	<li></li>
-			 	  	<li></li>
-			 	  	<li></li>
-			 	  	<li></li>
-			 	  	<li></li>
+			 	  	<li><a href="/homepage">homepage</a></li>
+			 	  	<li><a href="/livestream">LiveStream</a></li>
 		 	     </ul>
 		 	  </div>
 
-		 	  <div class="col-sm-9">
-		 	  	  <div class=""></div>
-		 	  	  <div class=""></div>
-		 	  	  <div class=""></div>
-		 	  	  <div class=""></div>
-		 	  	  <div class=""></div>
-		 	  	  <div class=""></div>
+		 	  <div class="col-sm-9 mainBody">
+		 	  	  <button id="firstButton">admin page</button>
+		 	  	  <div class="formDiv">
+		 	  	  	<form action="">
+		 	  	  	    <button>submit</button>	
+		 	  	  	</form>
+		 	  	  </div>
+		 	  	  <div class="formDiv">
+		 	  	  	<form action="">
+		 	  	  		<button>submit</button>
+		 	  	  	</form>
+		 	  	  </div>
+		 	  	  <div class="formDiv">
+		 	  	  	<form action="">
+		 	  	  		<button>submit</button>
+		 	  	  	</form>
+		 	  	  </div>
+		 	  	  <div class="formDiv">
+		 	  	  	<form action="">
+		 	  	  		<button>submit</button>
+		 	  	  	</form>
+		 	  	  </div>
+		 	  	  <div class="formDiv">
+		 	  	  	<form action="">
+		 	  	  		<button>submit</button>
+		 	  	  	</form>
+		 	  	  </div>
+		 	  	  <div class="formDiv">
+		 	  	  	 <form action="">
+		 	  	  	 	 <button>submit</button>
+		 	  	  	 </form>
+		 	  	  </div>
 		 	  </div>
 		 	</div>
 		 	<div class="row footer">
-		 		 <div class="col-sm-6">
+		 		 <div class="col-xs-6">
 		 		 	<p>mami logo</p>
 		 		 </div>
-		 		 <div class="col-sm-3">
+		 		 <div class="col-xs-3">
 		 		 	<ul>
 		 		 		<li>monday</li>
 		 		 		<li>tuesday</li>
@@ -51,7 +77,7 @@
 		 		 		<li>friday</li>
 		 		 	</ul>
 		 		 </div>
-		 		 <div class='col-sm-3'>
+		 		 <div class='col-xs-3'>
 		 		 	<ul>
 		 		 		<li>monday</li>
 		 		 		<li>tuesday</li>
@@ -68,6 +94,7 @@
 		 		 	</ul>
 		 		 </div>
 		 	</div>
+		 	<p id="copyright">copyright mami 2018</p>
 		 </div>
 		 <script>
 		 	
