--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -34,26 +34,28 @@
                </div>
                 <div class="row">
                      <div class="col-sm-6 listofministries">
+                        <p>MAMI PLATFORMS</p>
                         <ul>
-                            <li>item one</li>
-                            <li>item two</li>
-                            <li>item three</li>
-                            <li>item four</li>
-                            <li>item five</li>
-                            <li>item six</li>
-                            <li>item seven</li>
-                            <li>item eight</li>
-                            <li>item nine</li>
+                            <li>FREEDOM ON AIR</li>
+                            <li>LOVE CHOICES AND OTHER BEAUTIFUL WORDS</li>
+                            <li>MINISTERS IN TRAINING (MIT)</li>
+                            <li>FREEDOM MINISTRY ACADEMY (FMA)</li>
+                            <li>PUBLISHING ARM (FREEDOM CHRONICLES)</li>
+                            <li>REVIVE MINISTRY CAMP (RMC)</li>
+                            <li>BIRTHING THE SEED</li>
+                            <li>LADIES ONLINE MENTORING SCHOOL</li>
                         </ul>
                      </div>
                      <div class="col-sm-6">
                         <img src="/image/aboutSectionGif.gif" alt="">
+                        <p>something is to be here</p>
                      </div>
                </div>
                <div class="row">
                    <div class="col-sm-6">
-                       <p>something is here</p>
-                       <img src="" alt="">
+                        <div class="visionMissionDiv">
+                            <p><span>Vision</span> – Taking the message of FREEDOM to the nations, stressing with simplicity and clarity the liberty of believers in Christ and raising other freedom agents across the globe.</p>
+                        </div>
                    </div>
                    <div class="col-sm-6">
                        <form action="" class="partnersForm">
@@ -77,8 +79,8 @@
                                 <option value="Anually">Annually</option>
                                 <option value="Biannually">Biannually</option>
                             </select>
-                              <p class="inputTitle">Country</p>
-                             <select name="" id="" style="color: black;">
+                            <p class="inputTitle">Country</p>
+            <select name="" id="" style="color: black;">
                 <option value="Afghanistan">Afghanistan</option>
                 <option value="Albania">Albania</option>
                 <option value="Algeria">Algeria</option>
