--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -77,7 +77,7 @@
                      </div>
                      <div class="col-sm-6">
                         <img src="/image/aboutSectionGif.gif" alt="">
-                        <p id="partnerSaga" >PartnerShip with MAMI</p>
+                        <p id="partnerSaga" >PARTNERSHIP WITH MAMI</p>
                         <p id="partnerSaga1">Who is a MAMI partner</p>
                         <div class="discriptionOfPartnerShip">
                             <p><span style=""><img src='' alt=""></span>A MAMI partner is someone that partners with MAMI financially in other that MAMI will be able to perform her assignment of taking the Gospel to the ends of the earth.<br><br>
@@ -356,7 +356,6 @@
                	   	    <p>further Discription of the Event can be here further Discription of the Event can be here further Discription of the Event can be here</p>
                	   </div>
                </div>
-
 		 	   <div class="landingCover" style="display: none;">
 		 	   	   <p id="enterButton">enter</p>
 		 	   	   <p id="entercaption">Enlighteened Citizens of Gods Kingdom</p>
@@ -479,18 +478,44 @@
                    </ul>
                 </div>
                 <div class="row recommendedMessages">
+                      <p id="firstMessageTitle">please feel free to download pastors message, they are all 
+                      free of charge! enjoy!</p>
                       <div>
-                         <img src="" alt="">
+                         <img src="/images/messageAdvert.jpg" alt="">
                       </div>
+                      <p class="messageDiscription">Further Discription of this message!</p>
                       <div>
-                         <img src="" alt="">
+                         <img src="/images/messageAdvert.jpg" alt="">
                       </div>
+                      <p class="messageDiscription">Further Discription of this message!</p>
                       <div>
-                        <img src="" alt="">
+                        <img src="/images/messageAdvert.jpg" alt="">
                       </div>
+                      <p class="messageDiscription">Further Discription of this message!</p>
                       <div>
-                        <img src="" alt="">
+                        <img src="/images/messageAdvert.jpg" alt="">
                       </div>
+                      <p class="messageDiscription">Further Discription of this message!</p>
+                </div>
+                <div class="flexClassForDownloadMessages" style="">
+                    <p id="firstMessageTitle">please feel free to download pastors message, they are all 
+                      free of charge! enjoy!</p>
+                     <div>
+                          <img src="/images/messageAdvert.jpg" alt="">
+                          <p class="messageDiscription1">Further Discription of this message!</p>
+                     </div>
+                     <div>
+                          <img src="/images/messageAdvert.jpg" alt="">
+                          <p class="messageDiscription1">Further Discription of this message!</p>
+                     </div>
+                     <div>
+                          <img src="/images/messageAdvert.jpg" alt="">
+                          <p class="messageDiscription1">Further Discription of this message!</p>
+                     </div>
+                     <div>
+                         <img src="/images/messageAdvert.jpg" alt="">
+                         <p class="messageDiscription1">Further Discription of this message!</p>
+                     </div>
                 </div>
            </div>
                     <div class="largerContact">
@@ -508,11 +533,14 @@
                     </div>
               
               <div class="smallerContact">
-              	<form action="" name="contactForm1">
+              	<form action="" name="contactForm1" class="lastForm">
               	   <label for="contactForm">Contact Us</label>
-              	   <input type="text" value="fullname">
-              	   <input type="email" value="yourEmail@something.com">
-              	   <textarea name="" id="" style="">please enter your request</textarea>
+                   <p>please feel free to contact us concerning MAMI and we also like to recieve 
+                   your testimonies</p>
+              	   <input type="text" value="fullname"><br>
+              	   <input type="email" value="yourEmail@something.com"><br>
+              	   <textarea name="" id="" style="">please enter your request</textarea><br>
+                   <button>submit</button><br>
               	</form>
               </div>
           
